--- a/django_project/blog/templates/blog/post_list.html
+++ b/django_project/blog/templates/blog/post_list.html
@@ -8,19 +8,22 @@
 {% block content %}
     {% if posts %}
         {% for post in posts %}
-            <article class="post">
-                <h2 class="post__title">
-                    <a href="{% url 'blog:post-detail' post.slug %}">
-                        {{ post.title }}
-                    </a>
-                </h2>
-                <div class="flex-row">
-                    <p class="post__author">
-                        By: {{ post.author }}
-                    </p>
-                    <p class="post__date">
-                        Publish date: {{ post.created_at|date:'d F, Y' }}
-                    </p>
+            <article class="post post-flex">
+                <img src="{{ post.author.profile.image.url }}" alt="avatar">
+                <div>
+                    <h2 class="post__title">
+                        <a href="{% url 'blog:post-detail' post.slug %}">
+                            {{ post.title }}
+                        </a>
+                    </h2>
+                    <div class="flex-row">
+                        <p class="post__author">
+                            By: {{ post.author }}
+                        </p>
+                        <p class="post__date">
+                            Publish date: {{ post.created_at|date:'d F, Y' }}
+                        </p>
+                    </div>
                 </div>
             </article>
         {% endfor %}
