--- a/django_project/templates/index.html
+++ b/django_project/templates/index.html
@@ -19,6 +19,7 @@
             {% if user.is_authenticated %}
             <div class="nav-right logout">
                 <a href="{% url 'blog:post-create' %}">New Post</a>
+                <a href="{% url 'users:profile' %}">Profile</a>
                 <form method="post" action="{% url 'users:logout' %}">
                     {% csrf_token %}
                     <button>
