--- a/django_project/static/css/styles.css
+++ b/django_project/static/css/styles.css
@@ -17,9 +17,24 @@
 }
 
 body {
+    min-height: 100vh;
     background-color: var(--color-gray-medium);
+    display: flex;
+    flex-flow: column nowrap;
 }
 
+.main {
+    flex-grow: 1;
+    width: clamp(500px, 100vw, 920px)
+}
+
+.main:has(.profile) {
+    width: clamp(500px, 70vw, 650px)
+}
+
+.main:has(.login-form) {
+    width: unset;
+}
 
 a {
     color: inherit;
@@ -87,6 +102,11 @@ a {
         font-weight: bold;
         color: var(--color-gray-dark);
         font-size: 0.9rem;
+    }
+
+    .post__author>a:hover {
+        text-decoration: underline;
+        color: black;
     }
 }
 
@@ -397,4 +417,55 @@ a {
     >div {
         flex-grow: 1;
     }
+}
+
+
+.pagination {
+    display: flex;
+    font-size: 1.1rem;
+    margin-top: 4rem;
+    gap: 0.5rem;
+    align-items: flex-end;
+}
+
+.pagination :is(a, .current) {
+    display: block;
+    min-width: 40px;
+    padding: 8px;
+    text-align: center;
+    background-color: var(--color-gray-light);
+    border: 1px solid var(--color-gray-semidark);
+    border-radius: 4px;
+}
+
+.pagination :is(a, .current):hover {
+    background-color: var(--color-gray-dark);
+    color: white;
+}
+
+.pagination .current {
+    background-color: var(--color-gray-dark);
+    color: white;
+}
+
+.pagination :is(a, .current) {
+    display: block;
+}
+
+.footer {
+    margin-top: 4rem;
+    background: black;
+    padding-block: 1rem;
+    color: white;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.page-title {
+    text-transform: capitalize;
+}
+
+.page-title+hr {
+    margin-bottom: 2rem;
 }
