--- a/django_project/users/templates/users/login.html
+++ b/django_project/users/templates/users/login.html
@@ -18,5 +18,9 @@
             </p>
             
         </div>
+        <div class="password-reset">
+            <p>Forgot your password?</p>
+            <a href="{% url 'users:password_reset' %}">Reset Password</a>
+        </div>
     </form>
 {% endblock %}
